--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
+                    <release>23</release>
                 </configuration>
             </plugin>
         </plugins>
